--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Git San Kyi Tar Par</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates eos porro modi iste officia hic consectetur odio eveniet ipsum! Unde eaque eos tenetur ipsum, voluptatem accusamus? Dolores veniam sunt dignissimos!</p>
     <script src="js/app.js"></script>
 
 </body>
